sort.basic.comb.AlgCombSort11.scala.error
Erreur de compilation :
AlgCombSort11:21: error: ';' expected but integer literal found.
  if((ecart.asInstanceOf[Double] / 1.3).asInstanceOf[Int])==9 ||(ecart.asInstanceOf[Double] / 1.3).asInstanceOf[Int])==10){return 11}
                                                            ^